--- a/StockAnalysis/Info.plist
+++ b/StockAnalysis/Info.plist
@@ -25,6 +25,10 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>为了给您提供更好的服务，App需要访问您的相机</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>为了给您提供更好的服务，App需要访问您的相册</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
